--- a/Front-end/src/app/newsfeed/newsfeed.component.html
+++ b/Front-end/src/app/newsfeed/newsfeed.component.html
@@ -1,20 +1,7 @@
 <div class="content-wrapper">
 
     <div class="post-content">
-        <div class="new_post">
-            <div class="post_header">
-                <span class="post_title">Create post</span>
-            </div>
-            <div class="text">
-                <textarea name="" id="post_text" cols="30" rows="10" placeholder="What's on your mind"></textarea>
-            </div>
-            <div class="buttons">
-                <input type="file" id="file" >
-                <label for="file"><i class="far fa-file-image"></i> Image</label>
-                <button type="submit">Post</button>
-            </div>
-        </div>
-
+        <app-create-post></app-create-post>
         <div class="user_post">
             <div class="user_post_header">
                 <div class="user_img"></div>
