--- a/Front-end/src/app/newsfeed/newsfeed.component.html
+++ b/Front-end/src/app/newsfeed/newsfeed.component.html
@@ -2,6 +2,7 @@
 
     <div class="post-content">
         <app-create-post></app-create-post>
+        <app-view-posts [posts]="posts" ></app-view-posts>
         <div class="user_post">
             <div class="user_post_header">
                 <div class="user_img"></div>
