--- a/Front-end/src/app/post/create-post/create-post.component.html
+++ b/Front-end/src/app/post/create-post/create-post.component.html
@@ -9,7 +9,7 @@
         <div class="buttons">
             <input type="file" id="file" (change)="onFileChanged($event)" >
             <label for="file"><i class="far fa-file-image"></i> Image</label>
-            <button type="submit">Post</button>
+            <button class="form_new_post" type="submit">Post</button>
         </div>
     </form>
 </div>
