--- a/Front-end/src/app/auth/user-details/user-details.component.html
+++ b/Front-end/src/app/auth/user-details/user-details.component.html
@@ -4,47 +4,70 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header" style="text-align: center">
-                    <h4>Register</h4>
+                    <h4>Personnal Informations</h4>
                 </div>
                 <div class="card-body">
-                    <form [formGroup]="signupForm" (ngSubmit)="signup()">
+                    <form [formGroup]="userDetailsForm" (ngSubmit)="userDetails()">
+
                         <div class="form-group row">
-                            <label for="email_address" class="col-md-4 col-form-label text-md-right">E-Mail
-                                Address</label>
+                            <label class="col-md-4 col-form-label text-md-right">First Name</label>
                             <div class="col-md-6">
-                                <input type="email" [formControlName]="'email'" id="email_address" class="form-control" name="email-address" required
-                                    autofocus>
-                                <span *ngIf="!signupForm.get('email').valid && signupForm.get('email').touched">
-                                    Please provide a valid email
-                                </span>                                    
-                            </div>
-                        </div>
- 
-                        <div class="form-group row">
-                            <label class="col-md-4 col-form-label text-md-right">User Name</label>
-                            <div class="col-md-6">
-                                <input type="text" [formControlName]="'username'"class="form-control" required autofocus>
-                                <span *ngIf="!signupForm.get('username').valid && signupForm.get('username').touched">
-                                    Please provide a valid username
+                                <input type="text" [formControlName]="'firstName'"class="form-control" required autofocus>
+                                <span *ngIf="!userDetailsForm.get('firstName').valid && userDetailsForm.get('firstName').touched">
+                                    Please provide your first name.
                                 </span>                                 
                             </div>
                         </div>
- 
                         <div class="form-group row">
-                            <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
+                            <label class="col-md-4 col-form-label text-md-right">Last Name</label>
                             <div class="col-md-6">
-                                <input type="password" [formControlName]="'password'" id="password" class="form-control" name="password" required>
-                                <span *ngIf="!signupForm.get('password').valid && signupForm.get('password').touched">
-                                    Please provide a valid Password
-                                </span>  
+                                <input type="text" [formControlName]="'lastName'"class="form-control" required autofocus>
+                                <span *ngIf="!userDetailsForm.get('lastName').valid && userDetailsForm.get('lastName').touched">
+                                    Please provide your last name.
+                                </span>                                 
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-md-4 col-form-label text-md-right">Date of Birth</label>
+                            <div class="col-md-6">
+                                <input type="date" [formControlName]="'birthDate'"class="form-control" >                              
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-md-4 col-form-label text-md-right">Phone Number</label>
+                            <div class="col-md-6">
+                                <input type="text" [formControlName]="'phoneNumber'"class="form-control" >                            
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-md-4 col-form-label text-md-right">Job Title</label>
+                            <div class="col-md-6">
+                                <input type="text" [formControlName]="'currentJob'"class="form-control" >                            
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-md-4 col-form-label text-md-right">Country</label>
+                            <div class="col-md-6">
+                                <input type="text" [formControlName]="'country'"class="form-control"  >                            
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-md-4 col-form-label text-md-right">City</label>
+                            <div class="col-md-6">
+                                <input type="text" [formControlName]="'city'"class="form-control"  >                            
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-md-4 col-form-label text-md-right">Website</label>
+                            <div class="col-md-6">
+                                <input type="text" [formControlName]="'website'"class="form-control"  >                            
                             </div>
                         </div>
  
                         <span class="col-md-6 offset-md-4">
                             <button type="submit" class="sign-up">
-                                Sign Up
+                                Send
                             </button>
-                            <span style="padding-left: 15px">Existing user? <a routerLink="/login">Log In</a></span>
                         </span>
                     </form>
                 </div>
