--- a/Front-end/src/app/post/create-post/create-post.component.html
+++ b/Front-end/src/app/post/create-post/create-post.component.html
@@ -4,11 +4,11 @@
             <span class="post_title">Create post</span>
         </div>
         <div class="text">
-            <textarea [formControlName]="'description'"  id="post_text" cols="30" rows="10" placeholder="What's on your mind"></textarea>
+            <textarea [formControlName]="'description'"  id="post_text" cols="100" rows="10" placeholder="What's on your mind"></textarea>
         </div>
         <div class="buttons">
             <input type="file" id="file" (change)="onFileChanged($event)" >
-            <label for="file"><i class="far fa-file-image"></i> Image</label>
+            <label for="file"><i class="far fa-file-image"></i></label>
             <button class="form_new_post" type="submit">Post</button>
         </div>
     </form>
