--- a/Front-end/src/app/header/header.component.css
+++ b/Front-end/src/app/header/header.component.css
@@ -42,11 +42,12 @@
 
 .sign-in{
     display: flex;
-    width: 50%;
+    width: 60%;
     justify-content: space-between;
 }
 .sign-in>div{
     align-self: center;
+    width: 40%;
 }
 .sign-in div a{
     color: black;
@@ -70,4 +71,21 @@
 }
 .logout:hover{
     background-color: rgb(85, 85, 85);
+}
+
+.profile{
+    display: flex;
+    justify-content: space-between;
+}
+
+.image{
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+}
+.image>img{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
 }
