--- a/Front-end/src/app/post/view-posts/view-posts.component.css
+++ b/Front-end/src/app/post/view-posts/view-posts.component.css
@@ -36,22 +36,39 @@
 
 .reactions_container{
     display: flex;
-    justify-content: flex-start;
     align-items: center;
+    justify-content: space-between;
     margin: 10px 0;
 }
-
-.reactions_container .likes{
+.reactions{
+    display: flex;
+}
+.likes{
     color: rgb(71, 97, 170);
     margin-right: 10px;
 }
-.reactions_container .comments{
+.comments{
     color: rgb(71, 97, 170);
 }
 .reactions_container .add_like{
+    display: flex;
+    width: 9%;
     color: #4761aa;
-    margin-left: 300px;
+    justify-content: space-between;
+    
 }
+
+.user_img>img{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+.username{
+    cursor: pointer;
+}
+
 
 
 
