--- a/Front-end/src/app/post/view-posts/view-posts.component.html
+++ b/Front-end/src/app/post/view-posts/view-posts.component.html
@@ -1,7 +1,9 @@
 <div class="user_post" *ngFor="let post of posts">
     <div class="user_post_header">
-        <div class="user_img"></div>
-        <span class="username">{{post.userName}}</span>
+        <div class="user_img">
+            <img [src]="post.profileImage" alt="">
+        </div>
+        <span class="username"><a [routerLink]="['/profile',post.userName]">{{post.firstName}} {{post.lastName}}</a> </span>
     </div>
     <div class="text_container">
         <div class="text_content">
@@ -12,10 +14,15 @@
         <img  [src]="post.image" alt="">
     </div>  
     <div class="reactions_container">
-        <div class="likes"><i class="fas fa-heart"></i> {{post.likeCount}} likes</div>
-        <div class="comments"><i class="fas fa-comments"></i> {{post.commentCount}} comments</div>
-        <div class="add_like"><span><i class="far fa-heart"></i>like</span></div>
+        <div class="reactions">
+            <div class="likes"><i class="fas fa-heart"></i> {{post.likeCount}} likes</div>
+            <div class="comments"><i class="fas fa-comments"></i> {{post.commentCount}} comments</div>
+        </div>
+        
+        <div class="add_like">
+            <span><i class="far fa-heart"></i></span>
+            <span>like</span>
+        </div>
     </div>
     <app-comment [post]="post"></app-comment>
-    
 </div>
