--- a/Front-end/src/app/auth/signup/signup.component.html
+++ b/Front-end/src/app/auth/signup/signup.component.html
@@ -8,6 +8,17 @@
                 </div>
                 <div class="card-body">
                     <form [formGroup]="signupForm" (ngSubmit)="signup()">
+                        <div class="form-group row" style="margin-left: 200px;">
+                           
+                            <div class="col-md-5">
+                                <label for="email_address" style="margin-right: 10px;">Candidate</label>
+                                <input type="radio" [formControlName]="'userType'" id="email_address" name="candidate" value="candidate">                                    
+                            </div>
+                            <div class="col-md-5">
+                                <label for="email_address" style="margin-right: 10px;">Provider</label>
+                                <input type="radio" [formControlName]="'userType'" id="email_address" name="provider" value="provider">                                    
+                            </div>
+                        </div>
                         <div class="form-group row">
                             <label for="email_address" class="col-md-4 col-form-label text-md-right">E-Mail
                                 Address</label>
