--- a/Front-end/src/app/auth/user-profile/user-profile.component.css
+++ b/Front-end/src/app/auth/user-profile/user-profile.component.css
@@ -44,6 +44,7 @@
     display: flex;
     flex-direction: column;
     padding: 10px;
+    border-bottom: 1px solid black;
 }
 .header{
     font-size: large;
@@ -124,6 +125,10 @@ input[type="file"]{
 }
 .buttons>label:hover,.upload:hover{
     opacity: 0.9;
+}
+.post_container{
+    width: 80%;
+    margin: 50px auto;
 }
 
 
