--- a/Front-end/src/app/profile/profile.component.html
+++ b/Front-end/src/app/profile/profile.component.html
@@ -35,13 +35,15 @@
       </div>
 
       <div class="profil-2">
-          <div class="about-me">
+          <div class="about-me" *ngIf="aboutMe">
               <span class="header">About Me</span> 
-              <div class="text" *ngIf="aboutMe">
+              <div class="text" >
                   {{aboutMe}}
               </div>
           </div>
-
+          <div class="post_container">
+            <app-view-posts [posts]="posts"></app-view-posts>
+          </div>
       </div>
     </div>
     </div>
