--- a/Front-end/src/app/auth/user-details/user-details.component.html
+++ b/Front-end/src/app/auth/user-details/user-details.component.html
@@ -2,7 +2,7 @@
     <div class="row justify-content-center">
         <div class="col-md-3"></div>
         <div class="col-md-6">
-            <div class="card">
+            <div class="card" style="margin: 100px 0;">
                 <div class="card-header" style="text-align: center">
                     <h4>Personnal Informations</h4>
                 </div>
@@ -12,19 +12,19 @@
                         <div class="form-group row">
                             <label class="col-md-4 col-form-label text-md-right">First Name</label>
                             <div class="col-md-6">
-                                <input type="text" [formControlName]="'firstName'"class="form-control" required autofocus>
-                                <span *ngIf="!userDetailsForm.get('firstName').valid && userDetailsForm.get('firstName').touched">
+                                <input type="text" [formControlName]="'firstName'" class="form-control">
+                                <!--<span *ngIf="!userDetailsForm.get('firstName').valid && userDetailsForm.get('firstName').touched">
                                     Please provide your first name.
-                                </span>                                 
+                                </span>    -->                             
                             </div>
                         </div>
                         <div class="form-group row">
                             <label class="col-md-4 col-form-label text-md-right">Last Name</label>
                             <div class="col-md-6">
-                                <input type="text" [formControlName]="'lastName'"class="form-control" required autofocus>
-                                <span *ngIf="!userDetailsForm.get('lastName').valid && userDetailsForm.get('lastName').touched">
-                                    Please provide your last name.
-                                </span>                                 
+                                <input type="text" [formControlName]="'lastName'"class="form-control">
+                                <!--<span *ngIf="!userDetailsForm.get('firstName').valid && userDetailsForm.get('firstName').touched">
+                                    Please provide your first name.
+                                </span>    -->                             
                             </div>
                         </div>
                         <div class="form-group row">
