--- a/Front-end/src/app/header/header.component.html
+++ b/Front-end/src/app/header/header.component.html
@@ -25,7 +25,15 @@
             <div><a routerLink="/login">SIGN IN</a></div>
         </div>
     </div>
+    <div class="sidebar" [class.show]="show">
+            <div class="link" (click)="toggleClass()"><a routerLink='/'>Home</a></div>
+            <div class="link" (click)="toggleClass()"><a routerLink='/newsfeed'>Feed</a></div>
+            <div class="link" (click)="toggleClass()"><a routerLink='/profile'>Profil</a></div>
+            <div class="link" (click)="toggleClass()"><a routerLink='/group'>Groups</a></div>
+            <div class="link" (click)="toggleClass()"><a href="">Events</a></div>
+            <div class="link" (click)="toggleClass()"><a href="">Job Offers</a></div>
+    </div>
 </div>
-<div class="btn">
+<div class="btn" (click)="toggleClass()">
     <span class="fa fa-bars"></span>
 </div>
