--- a/Front-end/src/app/post/create-post/create-post.component.html
+++ b/Front-end/src/app/post/create-post/create-post.component.html
@@ -8,7 +8,7 @@
         </div>
         <div class="buttons">
             <input type="file" id="file" (change)="onFileChanged($event)" >
-            <label for="file"><i class="far fa-file-image"></i></label>
+            <label for="file"><i class="far fa-file-image"></i> Photo</label>
             <button class="form_new_post" type="submit">Post</button>
         </div>
     </form>
