--- a/Front-end/src/app/header/header.component.css
+++ b/Front-end/src/app/header/header.component.css
@@ -89,3 +89,34 @@
     height: 100%;
     border-radius: 50%;
 }
+.sidebar{
+    width: 200px;
+    background-color: #080808;
+    position: absolute;
+    top: 80px;
+    color: white;
+    font-size: 1em;
+    font-weight: bolder;
+    display: flex;
+    flex-direction: column;
+    left: -200px;
+    transition: left 0.4s ease;
+}
+
+.sidebar.show{
+    left: 0px;
+}
+
+.link{
+    padding-left: 10px;
+    padding-bottom: 10px;
+    border-bottom: 2px solid white;
+}
+
+.link>a{
+    color: white;
+    text-decoration: none;
+}
+.link>a:hover{
+    color: rgb(207, 207, 207);
+}
