--- a/Front-end/src/app/groups/create-group/create-group.component.html
+++ b/Front-end/src/app/groups/create-group/create-group.component.html
@@ -1,5 +1,8 @@
 <div class="group_wrapper">
-<div class="header">Create a group</div>
+<div class="header">
+    <div>Create a group </div>
+    <div class="exit"><i class="fas fa-times"></i></div>
+</div>
 <div class="body">
     <div class="img"></div>
     <div class="img_select"></div>
