--- a/Front-end/src/app/groups/create-group/create-group.component.css
+++ b/Front-end/src/app/groups/create-group/create-group.component.css
@@ -29,8 +29,11 @@
 .img{
     width: 88px;
     height: 88px;
-    background-color: black;
-    margin-right: 20px;
+    margin-right: 30px;
+    position: relative;
+    border: 1px solid rgb(128, 128, 128);
+    background-position: center;
+    background-size: cover;
 }
 
 .name>label{
@@ -57,4 +60,29 @@
 
 .footer>button:hover{
     background-color: rgb(61, 61, 61);
+}
+
+input[type="file"]{
+    display: none;
+}
+
+.img>label{
+    color: black;
+    position: absolute;
+    border-radius: 50%;
+    background-color: white;
+    width: 30px;
+    height: 30px;
+    top: 70px;
+    left: 70px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid black;
+}
+.img img{
+    width: 87px;
+    height: 87px;
+    position: relative;
 }
