--- a/Front-end/src/app/header/header.component.html
+++ b/Front-end/src/app/header/header.component.html
@@ -29,7 +29,7 @@
             <div class="link" (click)="toggleClass()"><a routerLink='/'>Home</a></div>
             <div class="link" (click)="toggleClass()"><a routerLink='/newsfeed'>Feed</a></div>
             <div class="link" (click)="toggleClass()"><a routerLink='/profile'>Profil</a></div>
-            <div class="link" (click)="toggleClass()"><a routerLink='/group'>Groups</a></div>
+            <div class="link" (click)="toggleClass()"><a routerLink='/groups'>Groups</a></div>
             <div class="link" (click)="toggleClass()"><a href="">Events</a></div>
             <div class="link" (click)="toggleClass()"><a href="">Job Offers</a></div>
     </div>
