--- a/Front-end/src/app/groups/list-group/list-group.component.html
+++ b/Front-end/src/app/groups/list-group/list-group.component.html
@@ -2,7 +2,7 @@
     <div class="list_content">
         <div class="list_header">Groups List</div>
         <div class="options">
-            <div class="create_group" (click)="addGroup()"><i class="fas fa-plus"></i> Create group</div>
+            <div *ngIf="userType.toLowerCase() == 'provider'" class="create_group" (click)="addGroup()"><i class="fas fa-plus"></i> Create group</div>
         </div>
         <div *ngFor="let group of groups">
             <div class="group_container">
