--- a/Front-end/src/app/header/header.component.html
+++ b/Front-end/src/app/header/header.component.html
@@ -1,6 +1,8 @@
 <div class="nav-bar">  
     <div class="logo-icon">
-        <div routerLink="/" style="cursor: pointer;">LOGO</div>
+        <div class="logo" routerLink="/" style="cursor: pointer;">
+            <img src="../../assets/logo2.png" alt="">
+        </div>
     </div>
     <div class="actualite">
         <div>News</div>
