--- a/Front-end/src/app/post/create-post/create-post.component.css
+++ b/Front-end/src/app/post/create-post/create-post.component.css
@@ -77,3 +77,8 @@ input[type="file"]{
     justify-content: space-between;
     margin-bottom: 5px;
 }
+
+.image img{
+    width: 100%;
+    margin-bottom: 20px;
+}
