--- a/Front-end/src/app/auth/user-profile/user-profile.component.css
+++ b/Front-end/src/app/auth/user-profile/user-profile.component.css
@@ -74,8 +74,9 @@
     flex-direction: column;
 }
 .img{
+    margin: 0 auto;
     width: 100%;
-    height: 100%;
+    height: 250px;
     position: relative;
 }
 
