--- a/Front-end/src/app/groups/view-group/view-group.component.css
+++ b/Front-end/src/app/groups/view-group/view-group.component.css
@@ -44,6 +44,47 @@
     position: relative;
 }
 
+.forbidden{
+    width: 100%;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: gray;
+    margin-bottom: 100px;
+}
+.join_button{
+    align-self: flex-end;
+    margin-right: 30px;
+}
+.join_button button{
+    height: 30px;
+    width: 75px;
+    font-weight: bold;
+    color: white;
+    background-color: rgb(94, 94, 199);
+    border-style: none;
+}
+.join_button>div{
+    padding: 4px;
+    background-color: rgb(214, 208, 208);
+}
+.join_button button:hover{
+    background-color: rgb(110, 110, 209);
+}
+
+.forbidden>div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+}
+
+.forbidden i {
+    font-size: 4em;
+    margin-bottom: 10px;
+}
+
 .group_title{
     position: relative;
     margin-top: 50px;
@@ -135,4 +176,11 @@
 }
 .admin_name{
     font-weight: 600;
+}
+
+.img{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    border-radius: 50%;
 }
