--- a/Front-end/src/app/home/home.component.css
+++ b/Front-end/src/app/home/home.component.css
@@ -1,8 +1,20 @@
+.content_wrapper{
+    background-color: rgb(218, 218, 218);
+    padding: 20px 0;
+}
 .content{
     width: 70%;
     display: flex;
-    margin: 20px auto;
+    margin: 0 auto;
     flex-direction: column;
+}
+
+.content_title{
+    display: flex;
+    padding: 20px 0;
+    justify-content: center;
+    font-size: xx-large ;
+    font-weight: bolder;
 }
 
 
@@ -67,10 +79,10 @@ ul li:hover {
 
 
 .img{
-    background-image: url('../../assets/homeimage.jpg');
+    background-image: url('../../assets/pexels-pixabay-220182.jpg');
     background-position: center;
     background-size: cover;
-    height: 700px;
+    height: 500px;
 }
 
 .fa-caret-right{
@@ -84,7 +96,7 @@ ul li:hover {
     background-color: black;
     opacity: 0.5;
     height: 200px;
-    top: 580px;
+    top: 380px;
     position: absolute;
 }
 
@@ -96,6 +108,7 @@ ul li:hover {
     line-height: 140px; 
     height: 140px;
     font-weight: bold;
+    font-size: 0.9em;
     cursor: pointer;
 }
 
@@ -106,10 +119,32 @@ ul li:hover {
 .background-2{
     width: 100%;
     height: 200px;
-    top: 580px;
+    top: 380px;
     position: absolute;
     color: white;
     display: flex;
     justify-content: space-around;
     align-items: center;
+}
+
+.welcome{
+    position: absolute; 
+    top: 26%; 
+    left: 50%; 
+    text-align: center;   
+    transform: translate(-50%, -20%);
+    font-size: 2.5em; 
+    line-height: 0.9;
+    color: rgb(61, 61, 61);
+    
+}
+.welcome span{
+    font-family: 'Lobster', cursive;    
+    letter-spacing: -3px;
+    background: linear-gradient(to right, #0e5e0b 0%, #dd4c4c 100%);
+	-webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 1.2em;
+
+    
 }
