--- a/Front-end/src/app/home/home.component.html
+++ b/Front-end/src/app/home/home.component.html
@@ -22,52 +22,59 @@
       Art and Culture
   </div>
 </div>
-<div class="welcome" style="position: absolute; top: 50%; left: 50%; text-align: center;   transform: translate(-50%, -50%);      font-size: 7em; color: white;">
-    Welcome
-</div>
-
-<div class="content" >
-  <div class="two">
-      <div class="hub">
-          <div class="title"><span>Hub Technologies</span></div>
-          <div class="hub-img3"></div>
-          <div>
-              <ul>
-                  <li><i class="fas fa-caret-right"></i>Innovate</li>
-                  <li><i class="fas fa-caret-right"></i>Optimize</li>
-                  <li><i class="fas fa-caret-right"></i>Modernize</li>
-              </ul>
-          </div>
-      </div>
-      <div class="hub">
-          <div class="title"><span>Hub Entrepreneurship</span></div>
-          <div class="hub-img2"></div>
-          <div>
-              <ul>
-                  <li><i class="fas fa-caret-right"></i>Invest</li>
-                  <li><i class="fas fa-caret-right"></i>Look for Peers</li>
-                  <li><i class="fas fa-caret-right"></i>Look for a job</li>
-                  <li><i class="fas fa-caret-right"></i>Boost up my start up</li>
-                  <li><i class="fas fa-caret-right"></i>Look for financement</li>
-                  <li><i class="fas fa-caret-right"></i>Look for market</li>
-                  <li><i class="fas fa-caret-right"></i>Find suppliers</li>
-              </ul>
-          </div>
-          
-      </div>
-      <div class="hub">
-          <div class="title"> <span>Hub Skills</span></div>
-          <div class="hub-img1"></div>
-          <div>
-              <ul>
-                  <li><i class="fas fa-caret-right"></i>Deposit my CV</li>
-                  <li><i class="fas fa-caret-right"></i>Offer conferences</li>
-                  <li><i class="fas fa-caret-right"></i>Mooks cours</li>
-                  <li><i class="fas fa-caret-right"></i>Look for peers</li>
-              </ul>
-          </div>
-      </div>
-  </div>
+<div class="welcome">
+    Welcome to <span>MoroccanOfTheWorld</span>, here you can exchange with moroccans across the world, share your excperiences,
+    find new opportunities, and more ...
 
 </div>
+<div class="content_wrapper">
+    <div class="content_title">
+        What do we offer ?
+    </div>
+    <div class="content" >
+        <div class="two">
+            <div class="hub">
+                <div class="title"><span>Hub Technologies</span></div>
+                <div class="hub-img3"></div>
+                <div>
+                    <ul>
+                        <li><i class="fas fa-caret-right"></i>Innovate</li>
+                        <li><i class="fas fa-caret-right"></i>Optimize</li>
+                        <li><i class="fas fa-caret-right"></i>Modernize</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="hub">
+                <div class="title"><span>Hub Entrepreneurship</span></div>
+                <div class="hub-img2"></div>
+                <div>
+                    <ul>
+                        <li><i class="fas fa-caret-right"></i>Invest</li>
+                        <li><i class="fas fa-caret-right"></i>Look for Peers</li>
+                        <li><i class="fas fa-caret-right"></i>Look for a job</li>
+                        <li><i class="fas fa-caret-right"></i>Boost up my start up</li>
+                        <li><i class="fas fa-caret-right"></i>Look for financement</li>
+                        <li><i class="fas fa-caret-right"></i>Look for market</li>
+                        <li><i class="fas fa-caret-right"></i>Find suppliers</li>
+                    </ul>
+                </div>
+                
+            </div>
+            <div class="hub">
+                <div class="title"> <span>Hub Skills</span></div>
+                <div class="hub-img1"></div>
+                <div>
+                    <ul>
+                        <li><i class="fas fa-caret-right"></i>Deposit my CV</li>
+                        <li><i class="fas fa-caret-right"></i>Offer conferences</li>
+                        <li><i class="fas fa-caret-right"></i>Mooks cours</li>
+                        <li><i class="fas fa-caret-right"></i>Look for peers</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+      
+      </div>
+</div>
+
 
