--- a/Front-end/src/app/post/create-post/create-post.component.html
+++ b/Front-end/src/app/post/create-post/create-post.component.html
@@ -6,8 +6,13 @@
         <div class="text">
             <textarea [formControlName]="'description'"  id="post_text" cols="100" rows="10" placeholder="What's on your mind"></textarea>
         </div>
+        <div class="image">
+            <div *ngIf="imgURL">
+                <img [src]="imgURL">
+            </div>
+        </div>
         <div class="buttons">
-            <input type="file" id="file" (change)="onFileChanged($event)" >
+            <input #file type="file" id="file" (change)="onFileChanged($event)"  (change)="preview(file.files)" >
             <label for="file"><i class="far fa-file-image"></i> Photo</label>
             <button class="form_new_post" type="submit">Post</button>
         </div>
