--- a/Front-end/src/app/groups/view-group/view-group.component.html
+++ b/Front-end/src/app/groups/view-group/view-group.component.html
@@ -63,6 +63,8 @@
                     </div>
                 </div>
             </div>
+            
+            <app-join-requests *ngIf="isAdmin"></app-join-requests>
         </div>
     </div>
     
