--- a/Front-end/src/app/auth/user-profile/user-profile.component.html
+++ b/Front-end/src/app/auth/user-profile/user-profile.component.html
@@ -62,9 +62,14 @@
                     <app-create-post></app-create-post>
                     <app-view-posts [posts]="posts"></app-view-posts>
                 </div>
-            
-            
-
         </div>
+        
+
     </div>
+</div>
+<div class="options">
+    <div class="option" [routerLink]="['/userdetails','verification']"><a >Become verified</a> </div>
+    <div class="option"><a>Make job offers</a> </div>
+    <div class="option"><a >Add Experiences</a> </div>
+    <div class="option"><a >Offer events</a> </div>
 </div>
