--- a/Front-end/src/app/auth/user-details/user-details.component.html
+++ b/Front-end/src/app/auth/user-details/user-details.component.html
@@ -2,6 +2,7 @@
     <div class="row justify-content-center">
         <div class="col-md-3"></div>
         <div class="col-md-6">
+            <div *ngIf="verification" class="verification">Please check your informations before submitting to get verified</div>
             <div class="card" style="margin: 100px 0;">
                 <div class="card-header" style="text-align: center">
                     <h4>Personnal Informations</h4>
