--- a/Front-end/src/app/auth/user-profile/user-profile.component.css
+++ b/Front-end/src/app/auth/user-profile/user-profile.component.css
@@ -132,6 +132,35 @@ input[type="file"]{
     margin: 50px auto;
 }
 
+.options{
+    position: absolute;
+    width: 180px;
+    top: 130px;
+    right: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+
+.option{
+    margin-bottom: 5px;
+    width: 100%;
+    height: 30px;
+    background-color: rgb(105, 105, 211);
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.option:hover{
+    background-color: rgb(84, 84, 197);
+}
+
 
 
 
